# configured

./: CHANGELOG.md  Cargo.toml  README.md  justfile  release.toml
.github/workflows/: ci.yaml
src/: lib.rs
test-config/: default.toml  default.yaml  dev.toml  dev.yaml  feat.yaml
test-config-kebab/: default.yaml
