[package]
name          = "configured"
version       = "0.6.0"
edition       = "2021"
description   = "Utility to load configuration from well defined layers into any type which can be deserialized by Serde."
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license-file  = "LICENSE"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/configured"
repository    = "https://github.com/hseeberger/configured"
documentation = "https://github.com/hseeberger/configured"

[dependencies]
config    = { version = "0.13" }
serde     = { version = "1.0", features = [ "derive" ] }
thiserror = { version = "1.0" }
