[package]
name          = "configured"
version       = "0.7.1"
edition       = "2021"
description   = "Utility to load configuration from well defined layers into any type which can be deserialized by Serde."
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license-file  = "LICENSE"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/configured"
repository    = "https://github.com/hseeberger/configured"
documentation = "https://docs.rs/configured/latest/configured"

[dependencies]
config    = { version = "0.13" }
serde     = { version = "1.0", features = [ "derive" ] }
thiserror = { version = "1.0" }
