[package]
name          = "configured"
description   = "Utility to load configuration from well defined layers into any type which can be deserialized by Serde."
version       = "0.9.1"
edition       = "2024"
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/configured"
repository    = "https://github.com/hseeberger/configured"
documentation = "https://docs.rs/configured/latest/configured/"
publish       = true

[dependencies]
config    = { version = "0.15", default-features = false, features = [ "convert-case" ] }
serde     = { version = "1.0", features = [ "derive" ] }
thiserror = { version = "2.0" }

[features]
default = [ "yaml" ]
yaml    = [ "config/yaml" ]
toml    = [ "config/toml" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [ "--cfg", "docsrs" ]
